fix: prevent UI jumps when scrolling to a month with bigger header
previously when body was higher then window and a bigger header scrolled into view
the UI somtimes jumped back to where the scrolling started

solved by adding a "counter-balance" to be buttom of the screen that
will shrink the same value that the header grows so that the vertical
scroll size does not change while scrolling

my brain hurts

--- a/src/views/CategorySidebar/CategorySidebar.module.scss
+++ b/src/views/CategorySidebar/CategorySidebar.module.scss
@@ -39,7 +39,8 @@
 .categorySidebar {
   border-right: none;
   height: calc(100% - var(--month-header-height));
-  transition: height 200ms ease-out;
+  padding-bottom: calc(300px - var(--month-header-height));
+  transition: height, padding 200ms ease-out;
   overflow-y: scroll;
   &::-webkit-scrollbar {
     display: none;
